fix app height on mobile devices

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,9 +11,9 @@
 html, body {
   padding: 0;
   margin: 0;
-  max-width: 100vw;
-  max-height: 100vh;
-  height: 100vh;
+  max-width: 100svw;
+  max-height: 100svh;
+  height: 100svh;
   overflow-y: auto;
   overflow-x: hidden;
 }
